# AppLogging

./: .gitignore  README.md  ReleaseNotes.md  pyproject.toml
src/applogging/: __init__.py  applogging.py  constants.py  entry.py  logging.py  typing.py  validation.py
tests/: conftest.py  constants.py
tests/logger/: test_entry.py  test_recipes.py  test_recipies.py
tests/validation/: test_validation.py
